Bold feature has been added

--- a/index.html
+++ b/index.html
@@ -9,20 +9,25 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>Text Editor - CT/2019/052</title>
 </head>
 
 <body>
 
-    <!--  Remove this div once you are started -->
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h1>Start Your Work Here!</h1>
-                <hr>
-            </div>
+    <main class="container">
+        <div class="tool_bar">
+            <button class="button" onclick="Feature_Bold()">
+                <img src="Resources/bold-xxl.png" width="15" alt="Bold">
+            </button>
+
+
+
+
+
+
         </div>
-    </div>
+    </main>
 
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -35,7 +40,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    
+    <script SRC="function.js"></script>
+
 </body>
 <!-- Author: [W.S SULAKSHANI] | [CT/2019/052] -->
 
