--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                 <img src="Resources/bold-xxl.png" width="15" alt="Bold">
             </button>
 
+            <button class="button" onclick="Feature_Underline()">
+                <img src="Resources/format_underline_white_192x192.png" width="25" alt="Underline">
+            </button>
 
 
 
