Italic feature has been added.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
                 <img src="Resources/format_underline_white_192x192.png" width="25" alt="Underline">
             </button>
 
+            <button class="button" onclick="Feature_Italic()">
+                <img src="Resources/italic-xxl.png" width="15" alt="Italic">
+            </button>
+
 
 
 
