Font color feature has been added.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
                 <img src="Resources/italic-xxl.png" width="15" alt="Italic">
             </button>
 
+            <button type="button" onclick="Feature_TextColor()">
+                <h5> A </h5>
+                <input type="color" onchange="Feature_TextColor()" />
+            </button>
+
+
+
 
 
 
