Text alignment feature has been added.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,22 @@
                 <input type="color" onchange="Feature_TextColor()" />
             </button>
 
+            <button class="button" onclick="Feature_LeftAlign()">
+                <img src="Resources/left.png" width="20" alt="Left">
+            </button>
+
+            <button class="button" onclick="Feature_ceneter()">
+                <img src="Resources/center.png" width="20" alt="center">
+            </button>
+
+            <button class="button" onclick="Feature_RightAlign()">
+                <img src="Resources/right.png" width="20" alt="Right">
+            </button>
+
+            <button class="button" onclick="Feature_Justify()">
+                <img src="Resources/justify.png" width="20" alt="Justify">
+            </button>
+
 
 
 
