Undo and Redo features has been added.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,14 @@
                 <img src="Resources/justify.png" width="20" alt="Justify">
             </button>
 
+            <button class="button" onclick="Feature_Undo()">
+                <img src="Resources/undo-4-32.png" width="20" alt="Undo">
+            </button>
+
+            <button class="button" onclick="Feature_Redo()">
+                <img src="Resources/action-redo-32.png" width="20" alt="Redo">
+            </button>
+
 
 
 
